doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05
-source
11
-classpath
C:\Program Files\Greenfoot\lib\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05
-d
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
hungry-animal-KomalAli05
-windowtitle
hungry-animal-KomalAli05
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05/BumbleBee.java
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05/Pumpkin.java
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05/Label.java
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05/MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05\BumbleBee.java...
Loading source file C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05\Pumpkin.java...
Loading source file C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05\Label.java...
Loading source file C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05\MyWorld.java...
Constructing Javadoc information...
C:\Users\kali2\Documents\GitHub\hungry-animal-KomalAli05\BumbleBee.java:18: error: cannot find symbol
    SimpleTimer animationTimer = new SimpleTimer();
    ^
  symbol:   class SimpleTimer
  location: class BumbleBee
warning: unknown enum constant Tag.Any
  reason: class file for threadchecker.Tag not found
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
1 error
4 warnings
